--- a/style.css
+++ b/style.css
@@ -1,183 +1,149 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 
 :root {
-    --login-bg:#f8f3ff;
-    --title-bg: #9089cc;
-    --button-bg: #674baf;
-    --light-pink: #A569BD;
-    --image-bg:  #eadbff ;
+  --login-bg: #f8f3ff;
+  --title-bg: #9089cc;
+  --button-bg: #674baf;
+  --light-pink: #a569bd;
+  --image-bg: #eadbff;
 }
-a{
-    text-decoration: none;
-    color: var(--light-pink);
+a {
+  text-decoration: none;
+  color: var(--light-pink);
 }
 body {
-    height: 100vh;
-    font-family: 'Poppins', sans-serif;
-    background-image: linear-gradient(to top,#ABEBC6  0%,#ABEBC6  100%);
+  height: 100vh;
+  font-family: "Poppins", sans-serif;
+  background-image: linear-gradient(to top, #abebc6 0%, #abebc6 100%);
+  overflow: hidden;
 }
 
 .login-container {
-    height: 43.75em;
-    width: 60em;
-    margin: 6em auto;
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-    overflow: hidden;
+  height: 50em;
+  width: 60em;
+  margin: 0em auto;
+  margin-bottom: 0%;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
 }
 
 .login-info-container {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding-top: 0.5rem;
-    background-color: var(--login-bg);
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-top: 0.5rem;
+  margin-bottom: 10em;
+  background-color: var(--login-bg);
 }
 
 .image-container {
-    padding: 2rem;
-    width: 50%;
-    background-color: var(--image-bg);
-    box-sizing: border-box;
+  padding: 2rem;
+  width: 50%;
+  margin-bottom: 10em;
+  background-color: var(--image-bg);
+  box-sizing: border-box;
 }
 
 .title {
-    text-transform: capitalize;
-    font-size: 2.25rem;
-    font-weight: 600;
-    letter-spacing: 1px;
-    color: var(--title-bg);
-}
-
-.social-login {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    cursor: pointer;
-}
-
-.social-login-element {
-    width: 12.5rem;
-    height: 3.75rem;
-    font-size: 1.2rem;
-    font-weight: 700;
-    letter-spacing: 0.5px;
-    border-radius: 5px;
-    border: 1px solid var(--button-bg);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.social-login-element img {
-    width: 1.875rem;
-    height: 1.875rem;
-    position: relative;
-    top: 0;
-    left: -0.625rem;
-}
-
-.social-login-element:hover {
-    background-color: #fff;
+  text-transform: capitalize;
+  font-size: 2.25rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: var(--title-bg);
 }
 
 .login-info-container > p {
-    font-size: 1.25em;
-    margin-top: 1.5em;
+  font-size: 1.25em;
+  margin-top: 1.5em;
 }
 
 .inputs-container {
-    height: 55%;
-    width: 85%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+  height: 55%;
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.input, .btn {
-    width: 90%;
-    height: 3.125rem;
-    font-size: 1em;
+.input,
+.btn {
+  width: 90%;
+  height: 3.125rem;
+  font-size: 1em;
 }
 
 .input {
-    padding-left: 20px;
-    border: none;
-    border-radius: 5px;
-    font-weight: 600;
-    letter-spacing: 1px;
-    box-sizing: border-box;
+  padding-left: 20px;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  box-sizing: border-box;
 }
 
 .input:hover {
-    border: 2px solid var(--button-bg);
+  border: 2px solid var(--button-bg);
 }
 
 .btn {
-    width: 80%;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    background-color: var(--button-bg);
-    cursor: pointer;
+  width: 80%;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--button-bg);
+  cursor: pointer;
 }
 
 .inputs-container p {
-    margin: 0;
+  margin: 0;
 }
 
 .span {
-    color: var(--light-pink);
-    font-weight: 600;
-    cursor: pointer;
+  color: var(--light-pink);
+  font-weight: 600;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1000px) {
-    .login-container {
-        width: 70%;
-        margin-top: 3rem;
-    }
-    .login-info-container {
-        width: 100%;
-        border-radius: 5px;
-    }
-    
-    .image-container {
-        display: none;
-    }  
+  .login-container {
+    width: 50%;
+    margin-top: 3rem;
+  }
+  .login-info-container {
+    width: 100%;
+    border-radius: 5px;
+  }
+
+  .image-container {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 650px) {
-    .login-container {
-        width: 90%;
-    }
+  .login-container {
+    width: 90%;
+  }
 }
 
 @media screen and (max-width: 500px) {
-    .login-container {
-        height: 90%;
-    }
+  .login-container {
+    height: 90%;
+  }
 
-    .social-login {
-        flex-direction: column;
-        align-items: center;
-        height: 30%;
-    }
+  .social-login {
+    flex-direction: column;
+    align-items: center;
+    height: 30%;
+  }
 
-    .login-info-container > p {
-        margin: 0;
-    }
+  .login-info-container > p {
+    margin: 0;
+  }
 }
-
-
-
-
-
-
-
