--- a/style.css
+++ b/style.css
@@ -2,10 +2,14 @@
 
 :root {
   --login-bg: #f8f3ff;
-  --title-bg: #9089cc;
-  --button-bg: #674baf;
-  --light-pink: #a569bd;
+  --title-bg: #118CD9;
+  --button-bg: #BFA7F2;
+  --light-pink: #67733D;
   --image-bg: #eadbff;
+}
+#click-iniciarSesion{
+  text-decoration: none;
+  color: white;
 }
 a {
   text-decoration: none;
@@ -14,7 +18,7 @@ a {
 body {
   height: 100vh;
   font-family: "Poppins", sans-serif;
-  background-image: linear-gradient(to top, #abebc6 0%, #abebc6 100%);
+  background-image: linear-gradient(to top, #323240 0%, #323240 100%);
   overflow: hidden;
 }
 
@@ -23,7 +27,7 @@ body {
   width: 60em;
   margin: 0em auto;
   margin-bottom: 0%;
-  border-radius: 10px;
+  border-radius: 0;
   display: flex;
   justify-content: space-between;
   overflow: hidden;
@@ -38,6 +42,7 @@ body {
   padding-top: 0.5rem;
   margin-bottom: 10em;
   background-color: var(--login-bg);
+  border-radius: 0;
 }
 
 .image-container {
@@ -46,6 +51,7 @@ body {
   margin-bottom: 10em;
   background-color: var(--image-bg);
   box-sizing: border-box;
+  border-radius: 0;
 }
 
 .title {
