ADD CAPSLOCK WARNING

--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
 }
 .card {
   width: 30rem;
-  margin-top: 5rem;
+  margin-top: 3rem;
   margin-left: 20rem;
   border-radius: 5%;
   border-style: 5px solid;
@@ -18,4 +18,7 @@ body {
     rgba(238, 174, 202, 1) 0%,
     rgba(148, 187, 233, 1) 100%
   );
+}
+.message{
+  color: red;
 }
