--- a/style/style.css
+++ b/style/style.css
@@ -2,10 +2,14 @@
   --main-bg: rgb(238, 174, 202);
   --main-button: rgba(148, 187, 233, 1);
 }
+html{
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
 .main-bg{
   background-color: var(--main-bg) !important;
   background: linear-gradient(
-    90deg,
+    60deg,
     rgba(238, 174, 202, 1) 0%,
     rgba(148, 187, 233, 1) 100%
   );
