--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,8 @@
   --main-bg: rgb(238, 174, 202);
   --main-button: rgba(148, 187, 233, 1);
 }
-html, body{
+/* BLOQUEAR DESPLAZAMIENTO X*/
+html, body{ 
   overflow-x: hidden;
 }
 .main-bg{
